force-app/main/default/objects/Family_Portal_Guardian__c/Family_Portal_Guardian__c.object-meta.xml
<CustomObject>
    <description>This Object is used to store the Guardian information for the Family Portal Community</description>
    <label>Family Portal Guardian</label>
    <nameField>
        <displayFormat>FPG-{0}</displayFormat>
        <label>Family Portal Guardian ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Portal Guardians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>