force-app/main/default/objects/Family_Portal_Guardian__c/fields/ASU_Alumni__c.field-meta.xml
<CustomField>
    <fullName>ASU_Alumni__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>True if the Guardian is an ASU Alumni, false if the guardian is not an ASU Alumni</description>
    <label>ASU Alumni</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>