force-app/main/default/objects/Family_Portal_Guardian__c/fields/ASURITE_ID__c.field-meta.xml
<CustomField>
    <fullName>ASURITE_ID__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Guardian ASURITE</description>
    <label>ASURITE ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>