force-app/main/default/objects/Family_Portal_Guardian__c/fields/Business_Unit_Source__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Source__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>The source of where the guardian is coming from, if any</description>
    <label>Business Unit Source</label>
    <length>128</length>
    <type>Text</type>
</CustomField>