force-app/main/default/objects/Family_Portal_Guardian__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>City of the Guardian's address</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>