force-app/main/default/objects/Family_Portal_Guardian__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Guardian Contact id</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family Portal Guardians</relationshipLabel>
    <relationshipName>Family_Portal_Guardians</relationshipName>
    <type>Lookup</type>
</CustomField>