force-app/main/default/objects/Family_Portal_Guardian__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Country name of the Guardian's address</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>