force-app/main/default/objects/Family_Portal_Guardian__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Guardian email</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>