force-app/main/default/objects/Family_Portal_Guardian__c/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Guardian ASU Emplid</description>
    <label>EMPLID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>