force-app/main/default/objects/Family_Portal_Guardian__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Guardian first name</description>
    <label>First Name</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>