force-app/main/default/objects/Family_Portal_Guardian__c/fields/Hash_ID__c.field-meta.xml
<CustomField>
    <fullName>Hash_ID__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Guardian record Hash id</description>
    <label>Hash ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>