force-app/main/default/objects/Family_Portal_Guardian__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Guardian last name</description>
    <label>Last Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>