force-app/main/default/objects/Family_Portal_Guardian__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Optional name field to assist with matching</description>
    <label>Middle Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>