force-app/main/default/objects/Family_Portal_Guardian__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Guardian phone number</description>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>