force-app/main/default/objects/Family_Portal_Guardian__c/fields/Return_URL__c.field-meta.xml
<CustomField>
    <fullName>Return_URL__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Family Portal return URL for the Guardian</description>
    <label>Return URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>