force-app/main/default/objects/Family_Portal_Guardian__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>State of the Guardian address</description>
    <label>State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>