force-app/main/default/objects/Family_Portal_Guardian__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Street address of the Guardian Address</description>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>