force-app/main/default/objects/Family_Portal_Guardian__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Postal Code of the Guardian Address</description>
    <label>Zip Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>